CDOT release/2025 q3 (#56)
* Reverting routing breaking change

* testing map layer changes to get haas features over RSU icons

* Adding ROCKSDB memory env variables

* reconfiguring readme mongodb data dump commands

* Adding CM and test-message-sender links

* Adding rocksdb vars to ODE

* Add HAAS API controller and mock data generation; update environment variables and webapp API paths

* pushing code to transfer to laptop

* Parameterizing python api sql queries

* Tweaking and fixing parameterized queries

* Updating parameterized lists and fixing rsu_online_status

* Adding parameterized placeholders for org list queries

* Refactor HAAS location data handling: replace pagination with limit in repository and controller, introduce LimitedGeoJsonResponse, and update tests accordingly.

* Adding tests for sql paceholder gen, fixing tests

* Refactor HaasLocationConverter to use GeoJsonPoint for geometry representation, remove GeoJsonGeometry class, and update related tests for new structure.

* adding missing `INTERSECTION_API_ENABLE_HAAS` env var

* removed commented out code

* Removing unnecessary get_user_info call

* Update Map.test.tsx.snap

* Added additions to resolve comments for the pull request and merged latest develop changes

* Remove magic strings in rsu_location

* Removing unused imports

* Removing unnecessary comments

* Bug fixes and improvements to asn1 decoder page

* Updating for compatibility with new Processed Message Types

* Parameterize the SQL scripts

* mongoUpdating repositories for new message formats

* Removing deprecated references

* Add paramterized support in the pgquery script

* Updating to Java 22

* Updated BSM message decoding to use FFM

* Adding task tests

* Adding config, intersection, and notification controller tests

* Updating iapi readme test commands

* Adding testGetIntersectionsContainingPoint

* Adding remaining controller tests

* Adding properties tests

* Adding controller tests for findLatest and add

