@@ -43,8 +43,8 @@ import us.dot.its.jpo.ode.api.models.AggregationResult;
 import us.dot.its.jpo.ode.api.models.AggregationResultCount;
 
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.SpyBean;
 import org.springframework.test.context.ActiveProfiles;
+import org.springframework.test.context.bean.override.mockito.MockitoSpyBean;
 import org.springframework.test.context.junit4.SpringRunner;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -57,7 +57,7 @@ import io.zonky.test.db.AutoConfigureEmbeddedDatabase;
 @AutoConfigureEmbeddedDatabase
 public class ProcessedSpatRepositoryImplTest {
 
-    @SpyBean
+    @MockitoSpyBean
     private MongoTemplate mongoTemplate;
 
     @Mock
@@ -155,7 +155,7 @@ public class ProcessedSpatRepositoryImplTest {
         Aggregation capturedAggregation = aggregationCaptor.getValue();
 
         // Extract the MatchOperation from the Aggregation pipeline
-        Document pipeline = capturedAggregation.toPipeline(Aggregation.DEFAULT_CONTEXT).get(0);
+        Document pipeline = capturedAggregation.toPipeline(Aggregation.DEFAULT_CONTEXT).getFirst();
 
         // Assert the Match operation Criteria
         assertThat(pipeline.toJson())
@@ -164,7 +164,7 @@ public class ProcessedSpatRepositoryImplTest {
                         intersectionID, startTimeString, endTimeString));
 
         // Serialize results to JSON and compare with the original JSON
-        String resultJson = objectMapper.writeValueAsString(findResponse.getContent().get(0));
+        String resultJson = objectMapper.writeValueAsString(findResponse.getContent().getFirst());
 
         // Remove unused fields from each entry
         List<Document> expectedResult = sampleDocuments.stream().map(doc -> {
@@ -172,32 +172,34 @@ public class ProcessedSpatRepositoryImplTest {
             doc.remove("recordGeneratedAt");
             return doc;
         }).toList();
-        String expectedJson = objectMapper.writeValueAsString(expectedResult.get(0));
+        String expectedJson = objectMapper.writeValueAsString(expectedResult.getFirst());
 
         // Compare JSON with ignored fields
         JSONAssert.assertEquals(expectedJson, resultJson, new CustomComparator(
                 JSONCompareMode.LENIENT, // Allows different key orders
-                new Customization("properties.timeStamp", (o1, o2) -> true),
-                new Customization("properties.odeReceivedAt", (o1, o2) -> true),
-                new Customization("properties.odeReceivedAt", (o1, o2) -> true),
+                new Customization("properties.timeStamp", (_, _) -> true),
+                new Customization("properties.odeReceivedAt", (_, _) -> true),
+                new Customization("properties.odeReceivedAt", (_, _) -> true),
                 new Customization(
                         "states[signalGroup=2].stateTimeSpeed[eventState=PROTECTED_CLEARANCE].timing.maxEndTime",
-                        (o1, o2) -> true),
+                        (_, _) -> true),
                 new Customization(
                         "states[signalGroup=2].stateTimeSpeed[eventState=PROTECTED_CLEARANCE].timing.minEndTime",
-                        (o1, o2) -> true),
-                new Customization("states[signalGroup=4].stateTimeSpeed[eventState=STOP_AND_REMAIN].timing.maxEndTime",
-                        (o1, o2) -> true),
-                new Customization("states[signalGroup=4].stateTimeSpeed[eventState=STOP_AND_REMAIN].timing.minEndTime",
-                        (o1, o2) -> true),
+                        (_, _) -> true),
+                new Customization(
+                        "states[signalGroup=4].stateTimeSpeed[eventState=STOP_AND_REMAIN].timing.maxEndTime",
+                        (_, _) -> true),
+                new Customization(
+                        "states[signalGroup=4].stateTimeSpeed[eventState=STOP_AND_REMAIN].timing.minEndTime",
+                        (_, _) -> true),
                 new Customization(
                         "states[signalGroup=6].stateTimeSpeed[eventState=PROTECTED_CLEARANCE].timing.maxEndTime",
-                        (o1, o2) -> true),
+                        (_, _) -> true),
                 new Customization(
                         "states[signalGroup=6].stateTimeSpeed[eventState=PROTECTED_CLEARANCE].timing.minEndTime",
-                        (o1, o2) -> true),
+                        (_, _) -> true),
                 new Customization(
                         "utcTimeStamp",
-                        (o1, o2) -> true)));
+                        (_, _) -> true)));
     }
 }
